# doc-gen

./: .gitignore  LICENSE  PROJECT_STRUCTURE.txt  README.md  manifest.yml  pyproject.toml
.doc-gen/: check-report.txt  ignore-patterns.txt  manifest.fletch  manifest.yml
.doc-gen/manifest-backups/: 20260326-190028-manifest.yml
.doc-gen/output/: .gitignore.md  LICENSE.md  PLUGIN_GUIDE.md.md  README.md.md  doc-config.yml.template.md  manifest.yml.md  project-tree.txt  pyproject.toml.md
.doc-gen/output/doc_gen/: __init__.py.md  __main__.py.md  doc-config.yml.template.md
.doc-gen/output/doc_gen/core/: __init__.py.md  builder.py.md  config.py.md  engine.py.md  generator.py.md  gitignore.py.md  logger_setup.py.md  manifest.py.md  scanner.py.md
.doc-gen/output/doc_gen/data/: defaults.yml.md
.doc-gen/output/doc_gen/plugins/: __init__.py.md  base.py.md
.doc-gen/output/doc_gen/ui/: __init__.py.md  cli.py.md  menu.py.md  menu_actions.py.md
.doc-gen/output/doc_gen/utils/: __init__.py.md  helpers.py.md  prompts.py.md  tree.py.md
.doc-gen/output/docs/: configuration.md.md  design-philosophy.md.md  installation.md.md  menu-reference.md.md  output-format.md.md  project-structure.md.md  roadmap.md.md  structure.md.md  troubleshooting.md.md  workflows.md.md
.doc-gen/output/examples/sample-python/: .gitignore.md
.doc-gen/output/examples/sample-shell/: .gitignore.md
.doc-gen/output/manifest-backups/: 20260105-113612-manifest.yml.md  20260105-115836-manifest.yml.md  20260106-142217-manifest.yml.md
.doc-gen/output/plug-ins/: README.MD.md
.doc-gen/output/plug-ins/examples/: formatter_html.py.md  processor_image.py.md  syntax_detector_example.py.md
.doc-gen/output/tests/: __init__.py.md  test_generator.py.md  test_manifest.py.md  test_plugins.py.md  test_prompt.py.md  test_scanner.py.md
doc_gen/: __init__.py  __main__.py
doc_gen/core/: builder.py  config.py  engine.py  generator.py  gitignore.py  logger_setup.py  manifest.py  scanner.py
doc_gen/ui/: cli.py  menu.py  menu_actions.py
doc_gen/utils/: prompts.py  tree.py
docs/: configuration.md  design-philosophy.md  menu-reference.md  output-format.md  project-structure.md  structure.md  troubleshooting.md
docs/mermaid/current/: 2026JAN17overview.mmd  code_tree.mmd  modules.mmd
docs/mermaid/planned/: overview.mmd
docs/mirror/: .gitignore.md  LICENSE.md  PLUGIN_GUIDE.md.md  README.md.md  doc-config.yml.md  doc-config.yml.template.md  manifest.yml.md  setup.py.md
docs/mirror/doc_gen/: __init__.py.md  __main__.py.md
docs/mirror/doc_gen/core/: __init__.py.md  builder.py.md  config.py.md  generator.py.md  gitignore.py.md  logger_setup.py.md  manifest.py.md  scanner.py.md
docs/mirror/doc_gen/plugins/: __init__.py.md  base.py.md
docs/mirror/doc_gen/ui/: __init__.py.md  cli.py.md  menu.py.md
docs/mirror/plug-ins/: README.MD.md
docs/mirror/tests/: __init__.py.md  test_generator.py.md  test_manifest.py.md  test_plugins.py.md  test_prompt.py.md  test_scanner.py.md
examples/sample-python/scripts/: simplemenu.py
manifest-backups/: 20260105-113612-manifest.yml  20260105-115836-manifest.yml  20260106-142217-manifest.yml
plug-ins/: README.MD
tests/: __init__.py  test_manifest.py  test_prompt.py
tmp/: README.md  contributing.md  design-philosophy.md  installation.md  output-format.md  roadmap.md  troubleshooting.md  workflows.md
(+33 files in other folders)
